--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mern-market",
   "version": "1.0.0",
-  "description": "MERN shopping cart app",
+  "description": "MERN shopping cart app simple example",
   "main": "server.js",
   "scripts": {
     "start": "node backend/server"
