--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,11 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
